# epigram

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
data/: dictionary.ini
src/: dictionary.ini  dictionary.rs  dictionary.toml  main.rs  part_of_speech.rs  static_phrase_gen.rs  tests.rs
src/phrase_gen/: mod.rs  phrase_gen_build_error.rs  static_phrase_gen.rs
src/phrase_gen/examples/: static.toml
