[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"]}
configparser = "3.0"
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"
