[package]
name = "epigram"
version = "0.1.0"
edition = "2021"
description = "Generate random phrases in the CLI"
authors = ["João H. L. Corrêa <joaohlc@duck.com>"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"]}
rand = "0.8"
toml = "0.8"
